# rust-hawk

./: .gitignore
hawk/: Cargo.toml
hawk/src/: bewit.rs  credentials.rs  error.rs  header.rs  lib.rs  mac.rs  payload.rs  request.rs  response.rs
