[package]
name = "hawk"
version = "2.0.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>", "Edouard Oger <eoger@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://docs.rs/hawk/"
homepage = "https://docs.rs/hawk/"
description = "Hawk Implementation for Rust"

[dev-dependencies]
pretty_assertions = "0.5.1"

[dependencies]
base64 = "0.9.0"
openssl = "0.10.7"
time = "0.1.39"
url = "1.7.0"
rand = "0.4.2"
error-chain = "0.11.0"
